--- a/form.html
+++ b/form.html
@@ -41,29 +41,8 @@
         </h3>
     </div>
 
-    <div class="blue">
-        <h3 class="wid2">
-            Game Recommendations: Discover games that fit your style and budget, focusing on fun rather than high
-            stakes. <br>
-            Self-Assessment Tools: Take quick quizzes to evaluate your gambling habits and receive tailored tips for
-            improvement. <br>
 
-            <img src="images/chips.jpg" alt="chips" height="250px">
-
-            <img src="images/bank.jpg" alt="bank" height="175px">
-
-        </h3>
-    </div>
-
-    <div class="purple">
-        <h3 class="wid">
-            Community Support: Join a community of responsible gamblers, share experiences, and access expert advice.
-            <br>
-            Resources & Helplines: Easily access information on responsible gambling practices and support services.
-            <br>
-        </h3>
-
-    </div>
+    <img src="images/bank.jpg" alt="bank" height="175px">
 
     <div class="rightm">
         <form id="myForm">
@@ -91,10 +70,11 @@
                 <div class="inner">
                     <div class="front">
                         <div class="im">
-                            <img src="images/table.jpg" alt="table" height="200px">
+                            1
                         </div>
                     </div>
                     <div class="back">
+                        <img src="images/table.jpg" alt="table" height="150px">
                         <h1>see your spending</h1>
                     </div>
                 </div>
@@ -105,10 +85,11 @@
                 <div class="inner">
                     <div class="front">
                         <div class="im">
-                            <img src="images/money.jpg" alt="money" height="200px">
+                            2
                         </div>
                     </div>
                     <div class="back">
+                        <img src="images/money.jpg" alt="money" height="150px">
                         <h1>save your money</h1>
                     </div>
                 </div>
@@ -119,11 +100,27 @@
                 <div class="inner">
                     <div class="front">
                         <div class="im">
-                            <img src="images/slots.jpg" alt="slots" height="200">
+                            3
                         </div>
                     </div>
                     <div class="back">
+                        <img src="images/slots.jpg" alt="slots" height="150px">
                         <h1>just because the house always wins it doesnt mean you have to lose</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="space">
+            <div class="flip">
+                <div class="inner">
+                    <div class="front">
+                        <div class="im">
+                            4
+                        </div>
+                    </div>
+                    <div class="back">
+                        <img src="images/chips.jpg" alt="chips" height="150px">
+                        <h1>eeee</h1>
                     </div>
                 </div>
             </div>
