--- a/index.html
+++ b/index.html
@@ -16,15 +16,29 @@
 <body>
     <div class="grey">
         <div class="homeT">
-            <h1 class="title">BetWise</h1>
+            <h1 class="fm">BetWise</h1>
         </div>
-        <div class="off">
-            <h3>BetWise is your ultimate companion for responsible gambling. Designed to help <br /> you enjoy your
-                gaming experiences while keeping control, BetWise provides a <br /> range of features to ensure you
-                gamble safely and within your limits.</h3>
+        <div class="space">
+            <div class="log">
+                <h2>username: </h2>
+                <input/>
+                <h3>password: </h3>
+                <input/><br><br>
+                <a class="a2" href="avg.html">Log In</a>
+            </div>
+
+            <div class="sign">
+                <h2>username: </h2>
+                <input/>
+                <h3>password: </h3>
+                <input/><br><br>
+                <a class="a2" href="form.html">Sign Up</a>
+            </div>
+
+            
         </div>
-            <a href="form.html"><button class="gold">Start</button></a>
-            <a href="avg.html"><button class="gold">Bugetting</button></a>
+        <!-- <a href="form.html"><button class="gold">Start</button></a>
+        <a href="avg.html"><button class="gold">Bugetting</button></a> -->
     </div>
 </body>
 
