--- a/avg.html
+++ b/avg.html
@@ -14,7 +14,7 @@
     <title>"WIP"</title>
 </head>
 
-<body>
+<body class="bg">
     <div class="homeT">
         <h1 class="fm">Bugetting</h1>
         <label for="spent">Spent: </label>
@@ -52,7 +52,7 @@
                     console.log("spent")
 
                     if(remain >= 15000) {
-                        console.log("500")
+                        console.log("15000")
                     } else if(remain >= 100000) {
 
                     } else if(remain >= 5000) {
