--- a/index.html
+++ b/index.html
@@ -13,31 +13,39 @@
     <title>"WIP"</title>
 </head>
 
-<body>
-    <div class="grey">
-        <div class="homeT">
-            <h1 class="fm">BetWise</h1>
-        </div>
-        <div class="space">
-            <div class="log">
-                <h2>username: </h2>
-                <input/>
-                <h3>password: </h3>
-                <input/><br><br>
-                <a class="a2" href="avg.html">Log In</a>
+<body class="bg">
+    <div class="space">
+        <div class="log">
+            <div class="hd2">
+                BetWise
+            </div>
+            <div class="logo">
+                <img src="images/logo.png" alt="logo" height="300px">
+            </div>
+            <div class="hd">
+                <input class="hi" type="text" placeholder="Username"/><br><br>
+                <input class="hi" type="text" placeholder="Password"/><br><br>
+            </div><br><br>  
+            <div class="v">
+                <a href="avg.html"><button class="a2">Log In</button></a>
+            </div>
+            <div class="d">
+                <a class="a3" href="avg.html">Create Account</a>
             </div>
 
-            <div class="sign">
+        </div>
+
+        <!-- <div class="sign">
                 <h2>username: </h2>
                 <input/>
                 <h3>password: </h3>
                 <input/><br><br>
                 <a class="a2" href="form.html">Sign Up</a>
-            </div>
+            </div> -->
 
-            
-        </div>
-        <!-- <a href="form.html"><button class="gold">Start</button></a>
+
+    </div>
+    <!-- <a href="form.html"><button class="gold">Start</button></a>
         <a href="avg.html"><button class="gold">Bugetting</button></a> -->
     </div>
 </body>
