--- a/avg.html
+++ b/avg.html
@@ -16,7 +16,7 @@
 
 <body class="bg">
     <div class="homeT">
-        <h1 class="fm">Bugetting</h1>
+        <h1 class="fm">Bugeting</h1>
         <label for="spent">Spent: </label>
         <input type="number" id="spent" name="spent">
         <ul id="list">
