--- a/avg.html
+++ b/avg.html
@@ -16,14 +16,14 @@
 
 <body class="bg">
     <div class="homeT">
-        <h1 class="fm">Bugeting</h1>
+        <h1 class="fm">Budgeting</h1>
         <label for="spent">Spent: </label>
         <input type="number" id="spent" name="spent">
         <ul id="list">
 
         </ul>
         <h3 id="buget">Buget: 1000</h3>
-        <h2 class="fm">Alterinates</h3>
+        <h2 class="fm">Alternates</h3>
             
             <script>
                 function spent() {
