--- a/form.html
+++ b/form.html
@@ -28,11 +28,11 @@
         </div>
     </header>
 
-    <div class="light">
+    <div class="">
         <h2 class="wid2"> Welcome to the BetWise Webapp 🎲✨ </h2>
     </div>
 
-    <div class="grey">
+    <div class="">
         <h3 class="wid">
             Personalized Budgeting: Set your monthly spending limit and receive reminders to stay within your budget.
             <br>
