--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             <div class="v">
                 <a href="avg.html"><button class="a2">Log In</button></a>
             </div>
+            <br><br>
+            <h3>or sign in with</h3>
+            <img class="is" src="images/google.png" alt="lg" height="100px">
             <div class="d">
-                <a class="a3" href="avg.html">Create Account</a>
+                <a class="a3" href="form.html">Create Account</a>
             </div>
 
         </div>
