--- a/form.html
+++ b/form.html
@@ -46,8 +46,8 @@
 
     <div class="rightm">
         <form id="myForm">
-            <label for="mRev">ZipCode:</label>
-            <input class="grey2" type="number" id="zip" name="mRev" oninput="spend()"><br><br>
+            <label for="zip">ZipCode:</label>
+            <input class="grey2" type="number" id="zip" name="zip" oninput="spend()"><br><br>
 
             <label for="mRev">Monthly Revenue:</label>
             <input class="grey2" type="number" id="mRev" name="mRev" oninput="spend()"><br><br>
