--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="hd">
                 <input class="hi" type="text" placeholder="Username"/><br><br>
-                <input class="hi" type="text" placeholder="Password"/><br><br>
+                <input class="hi" type="password" placeholder="Password"/><br><br>
             </div><br><br>  
             <div class="v">
                 <a href="avg.html"><button class="a2">Log In</button></a>
@@ -51,6 +51,11 @@
     <!-- <a href="form.html"><button class="gold">Start</button></a>
         <a href="avg.html"><button class="gold">Bugetting</button></a> -->
     </div>
+
+    <footer>
+        <p>Copyright 2024. BetWise. All rights reserved.</p>
+    </footer>
+
 </body>
 
 </html>
